Prevent scroll bar from shifting content

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
    flex-flow: column;
    min-height: calc(100vh - var(--offset) * 2);
    padding: var(--offset);
+   padding-left: calc(100vw - 100% + var(--offset));
    align-items: center;
    justify-content: center;
    gap: 2rem;
